@@ -1,8 +1,6 @@
 package ca.gc.aafc.dina.mapper;
 
 import ca.gc.aafc.dina.dto.RelatedEntity;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import lombok.AllArgsConstructor;
 import lombok.NonNull;
 import lombok.SneakyThrows;
@@ -109,7 +107,7 @@ public class DinaMapper<D, E> {
   @SneakyThrows
   public D toDto(
     E entity,
-    ImmutableMap<Class<?>, ImmutableSet<String>> selectedFieldPerClass,
+    Map<Class<?>, Set<String>> selectedFieldPerClass,
     Set<String> relations
   ) {
     D dto = dtoClass.getConstructor().newInstance();
@@ -143,7 +141,7 @@ public class DinaMapper<D, E> {
   public void applyDtoToEntity(
     D dto,
     E entity,
-    ImmutableMap<Class<?>, ImmutableSet<String>> selectedFieldPerClass,
+    Map<Class<?>, Set<String>> selectedFieldPerClass,
     Set<String> relations
   ) {
     mapSourceToTarget(dto, entity, selectedFieldPerClass, relations, new IdentityHashMap<>());
@@ -164,7 +162,7 @@ public class DinaMapper<D, E> {
   private <T, S> void mapSourceToTarget(
     @NonNull S source,
     @NonNull T target,
-    @NonNull ImmutableMap<Class<?>, ImmutableSet<String>> selectedFieldPerClass,
+    @NonNull Map<Class<?>, Set<String>> selectedFieldPerClass,
     @NonNull Set<String> relations,
     @NonNull Map<Object, Object> visited
   ) {
@@ -172,7 +170,7 @@ public class DinaMapper<D, E> {
     // The source could be a Hibernate-proxied entity; unproxy it here:
     S unproxied = (S) Hibernate.unproxy(source);
     Class<?> sourceType = unproxied.getClass();
-    ImmutableSet<String> selectedFields = selectedFieldPerClass.getOrDefault(sourceType, ImmutableSet.of());
+    Set<String> selectedFields = selectedFieldPerClass.getOrDefault(sourceType, Set.of());
     Predicate<String> ignoreIf = field -> hasResolvers(field, sourceType);
 
     mapFieldsToTarget(unproxied, target, selectedFields, ignoreIf);
@@ -199,7 +197,7 @@ public class DinaMapper<D, E> {
   private <T, S> void mapRelationsToTarget(
     S source,
     T target,
-    ImmutableMap<Class<?>, ImmutableSet<String>> fieldsPerClass,
+    Map<Class<?>, Set<String>> fieldsPerClass,
     Set<String> relations,
     Map<Object, Object> visited
   ) {
@@ -247,7 +245,7 @@ public class DinaMapper<D, E> {
    */
   @SneakyThrows
   private Object mapRelation(
-    ImmutableMap<Class<?>, ImmutableSet<String>> fields,
+    Map<Class<?>, Set<String>> fields,
     Object source,
     Class<?> targetType,
     Map<Object, Object> visited
